--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أذكار الصباح</title>
+    <title>أذكار</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,9 +21,9 @@
 </head>
 <body>
 
-    <h1>Mon Lecteur Audio</h1>
+    <h1>أذكار الصباح</h1>
     <audio controls>
-        <source src="audio/musique1.mp3" type="audio/mp3">
+        <source src="assets/audio.ogg" type="audio/mp3">
         Votre navigateur ne supporte pas l'élément audio.
     </audio>
 
