--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h1>أذكار الصباح</h1>
     <audio controls>
-        <source src="assets/audio.ogg" type="audio/mp3">
+        <source src="assets/audio.ogg" type="audio/ogg">
         Votre navigateur ne supporte pas l'élément audio.
     </audio>
 
