--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <h1>أذكار الصباح</h1>
     <audio controls>
-        <source src="assets/audio.ogg" type="audio/ogg">
+        <source src="assets/adhkar.ogg" type="audio/ogg">
+        <source src="assets/adhkar.mp3" type="audio/mpeg">
         Votre navigateur ne supporte pas l'élément audio.
     </audio>
 
