--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <h1>أذكار الصباح</h1>
+    <h1>أذكار الصباح و المساء</h1>
     <audio controls>
         <source src="assets/adhkar.ogg" type="audio/ogg">
         <source src="assets/adhkar.mp3" type="audio/mpeg">
