--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, orientation=portrait">
     <link rel="stylesheet" href="style.css">
     <title>أذكار</title>
 </head>
 <body>
+
+    <img id="background" src="assets/background.svg" alt="Background image">
+    <img id="shatibi" src="assets/icons/shatibi.svg" alt="Shatibi logo">
 
     <div class="audio-container">
 
