--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <div class="page-container"></div>
+
     <img id="background" src="assets/background.svg" alt="Background image">
     <!-- img id="shatibi" src="assets/icons/shatibi.svg" alt="Shatibi logo" -->
 
@@ -43,6 +45,8 @@
                 <span id="totalDuration">0:00</span>
             </div>
         </div>
+
+    </div>
 
     </div>
 
