--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <img id="background" src="assets/background.svg" alt="Background image">
-    <!-- img id="shatibi" src="assets/icons/shatibi.svg" alt="Shatibi logo" -->
+    <img id="shatibi" src="assets/shatibi-logo.png" alt="Shatibi logo">
 
     <div class="audio-container">
 
