--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-    <img id="background" src="assets/background.svg" alt="Background image">
-    <img id="shatibi" src="assets/shatibi-logo.png" alt="Shatibi logo">
+    <img id="background" src="assets/background-wh.svg" alt="Background image">
 
     <div class="audio-container">
 
@@ -38,10 +37,12 @@
             </div>
 
             <input type="range" value="0" id="progress">
+
             <div class="time-container">
                 <span id="currentTime">0:00</span>
                 <span id="totalDuration">0:00</span>
             </div>
+
         </div>
 
     </div>
