--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <img id="background" src="assets/background-wh.svg" alt="Background image">
+    <img id="background" src="assets/pinterest.png" alt="Background image">
+    <img id="logo" src="assets/icons/shatibi-logo.svg" alt="Shatibi logo" >
 
     <div class="audio-container">
 
