--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <img id="background" src="assets/pinterest.png" alt="Background image">
-    <img id="logo" src="assets/icons/shatibi-logo.svg" alt="Shatibi logo" >
+    <img id="background" src="assets/pinterest3.png" alt="Background image">
+    <!-- img id="logo" src="assets/icons/shatibi-logo.svg" alt="Shatibi logo" -->
 
     <div class="audio-container">
 
